fixed color contrast

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -258,7 +258,7 @@ footer {
 
 .contact-info h2 {
     margin-top: 0;
-    color: #d9e5e8;
+    color: #fefefe;
 }
 
 .development-info {
